Fix border radius on mobile

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -371,7 +371,7 @@ ul {
 
 .project-description .project-description__project-title {
   font-size: 1.5em;
-  margin: 20px 0 35px;
+  margin: 20px 0 28px;
 }
 .project-description .project-description__project-caption {
   font-size: 1em;
