--- a/styles/scss/_project-description.scss
+++ b/styles/scss/_project-description.scss
@@ -2,7 +2,7 @@
 
     .project-description__project-title {
         font-size: 1.5em;
-        margin: 20px 0 35px;
+        margin: 20px 0 28px;
     }
 
     .project-description__project-caption {
